@@ -17,6 +17,13 @@ Release date: TBA
 
   Closes #4301
 
+* Improved recognition of namespace packages. They should no longer be added to ``sys.path``
+  which should prevent various issues with false positives.
+  Because of the difficulities with mirroring the python import mechanics we would gladly
+  hear feedback on this change.
+
+  Closes #5226, Closes #2648
+
 * ``BaseChecker`` classes now require the ``linter`` argument to be passed.
 
 * Fix a failure to respect inline disables for ``fixme`` occurring on the last line
